# PCLCombinedObjectDetection

./: .gitignore  LICENSE  README.md
Annotated_Dataset/: README.md  label_usc_shadow.m  lableusctabletop.m  png2jpg.py
Dataset/: experiment setup.txt
Dataset/pos 1/: box_pos1_dark_1.pcd  noodle_pos1_light_1.pcd  scene_pos1_light_1.pcd
Dataset/pos 2/: noodle_pos2_dark_1.pcd  noodle_pos2_light_1.pcd  scene_pos2_dark_1.pcd  scene_pos2_light_1.pcd  totoro_pos2_dark_1.pcd  totoro_pos2_light_1.pcd
Dataset/pos 3/: box_pos3_dark_1.pcd  box_pos3_light_1.pcd  noodle_pos3_dark_1.pcd  scene_pos3_light_1.pcd  totoro_pos3_dark_1.pcd
Dataset/pos 4/: scene_pos4_dark_1.pcd  scene_pos4_light_1.pcd  totoro_pos4_dark_1.pcd  totoro_pos4_light_1.pcd
Dataset_Archive/pos 1/: box_pos1_light_1.pcd  noodle_pos1_dark_1.pcd  scene_pos1_dark_1.pcd  totoro_pos1_dark_1.pcd  totoro_pos1_light_1.pcd
Dataset_Archive/pos 2/: box_pos2_dark_1.pcd  box_pos2_light_1.pcd  totoro_pos2_dark_a_1.pcd
Dataset_Archive/pos 3/: noodle_pos3_light_1.pcd  scene_pos3_dark_1.pcd  totoro_pos3_light_1.pcd
Dataset_Archive/pos 4/: box_pos4_dark_1.pcd  box_pos4_light_1.pcd  noodle_pos4_dark_1.pcd  noodle_pos4_light_1.pcd
Detection Package/: CMakeLists.txt
Detection Package/Binaries and Script/: clusters_postprocess.m  find_all_code.py  pipeline.py  shadow_cost_function.m  shadow_detection_pipeline.py
Detection Package/DownSample/: CMakeLists.txt  extremeFinder.cpp  extremeFinder.h  main.cpp
Detection Package/LightDetection/: CMakeLists.txt  extremeFinder.h  hough_accumulator.cpp  main.cpp  std_include.h  vector3.h
Detection Package/Matlab Scripts/: clusters_postprocess.m
Detection Package/PCLGeonDetection/: .cproject  .project  PCLGeonDetection.cpp  SACMODEL_CYLINDER_2.pcd  geon.pcd  geonDetector.cpp  geonDetector.h  input-1.pcd  readme  std_include.h
Detection Package/PCLtest/: New Text Document.txt  PCLtest.sln
Detection Package/PCLtest/PCLtest/: PCLtest.vcxproj  PCLtest.vcxproj.filters  banana_3_1_1.pcd  both.pcd  both.txt  box2.pcd  extremeFinder.h  final_shadow.pcd  geonDetector.cpp  geonDetector.h  hit_test.txt  hitmap.txt  in_plane.idx  in_plane.pcd  in_plane.txt  intersection_test.h  main.cpp  not_in_plane.idx  not_in_plane.pcd  not_in_plane.txt  output.pcd  seed_points_ext.pcd  tape5.pcd  tape5_tilted.pcd  tape_both.pcd  tape_final_shadow.pcd  tape_in_plane.pcd  tape_not_in_plane.pcd  utilities.cpp  vector3.h  whateverIwouldsay.txt
Detection Package/PCLtest/PCLtest/Debug/: PCLtest.lastbuildstate
Detection Package/PCLtest/PCLtest/PLC_Configuration/: PCLtest.lastbuildstate
Detection Package/PlaneDetection/: CMakeLists.txt  extremeFinder.cpp  extremeFinder.h  geonDetector.cpp  hough_accumulator.cpp  intersection_test.h  main.cpp  range_image_creation.cpp  region_growing_rgb_segmentation.cpp  shadow_detection.cpp  std_include.h  utilities.cpp
Detection Package/RegionGrowingHSV/: CMakeLists.txt  main.cpp  region_growing_hsv.h  region_growing_hsv.hpp
Detection Package/ShadowDetector/: .cproject  .project  CMakeLists.txt  PCLShadowDetector  Pcl-eclipse-tutorial.odt  main.cpp  readme.txt
Detection Package/ShadowDetector/images/: box1.pcd  tape1.pcd
Detection Package/ShadowDetector/output/: boundary_edge.pcd  high_curvature_edges.pcd  occluded_edges.pcd  occluding_edges.pcd  rgb_edges2.pcd  seed_edges.pcd
Detection Package/VisualizeResults/: CMakeLists.txt  main.cpp  region_growing_hsv.cpp  region_growing_hsv.h  region_growing_hsv.hpp
TheanoLearning/: TheanoLearning.sln
TheanoLearning/TheanoLearning/: TheanoLearning.py  TheanoLearning.pyproj  pycudatest.py  theano_mlp.py  theanotest2.py
TheanoLearning/TheanoLearning/.ipynb_checkpoints/: theano_demo-checkpoint.ipynb
Utilities/grabber/: CMakeLists.txt  grab_sample  grab_sample.cpp  readme
Utilities/recorder/: CMakeLists.txt  CMakeLists.txt~  pcdBuffer.cpp  pcdBuffer.h  pcdBufferRecorder  readme  recorder.cpp
Utilities/recorder/.svn/: entries
Utilities/recorder/.svn/text-base/: CMakeLists.txt.svn-base  recorder.cpp.svn-base
Utilities/registration/: CMakeLists.txt  CMakeLists.txt~  registration.cpp
